--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1,5 +1,3 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
-/* This is all you. */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
