--- a/resources/views/_nav.antlers.html
+++ b/resources/views/_nav.antlers.html
@@ -15,7 +15,7 @@
                 {{ nav:collection:pages include_home="true" }}
                     <li>
                         {{ if children }}
-                            <button data-dropdown-toggle="dropdown-{{ id }}" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">
+                            <button data-dropdown-toggle="dropdown-{{ id }}" {{ if is_current }}aria-current="page"{{ /if }} class="flex items-center justify-between w-full py-2 px-3 {{ if is_current || is_parent }}text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent{{ else }}text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent{{ /if }}">
                                 {{ title }}
                                 <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -34,10 +34,8 @@
                                     {{ /children }}
                                 </ul>
                             </div>
-                        {{ elseif url === current_uri }}
-                            <a href="{{ url }}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent" aria-current="page">{{ title }}</a>
                         {{ else }}
-                            <a href="{{ url }}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+                            <a href="{{ url }}" {{ if is_current }}aria-current="page"{{ /if }} class="block py-2 px-3 {{ if is_current || is_parent }}text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent{{ else }}text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent{{ /if }}">
                                 {{ title }}
                             </a>
                         {{ /if }}
